--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "start\ns\nsentence\n"
+    }
+   ],
    "source": [
-    "#Code here"
+    "for word in st.split():\n",
+    "    if word[0] == 's':\n",
+    "        print (word)"
    ]
   },
   {
@@ -46,11 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[0, 2, 4, 6, 8, 10]"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
    "source": [
-    "#Code Here"
+    "list(range(0,11,2))"
    ]
   },
   {
@@ -63,12 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
    "source": [
     "#Code in this cell\n",
-    "[]"
+    "list(range(0,51,3))"
    ]
   },
   {
@@ -81,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,11 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "word\nin\nthis\nsentence\nthat\nan\neven\nnumber\nof\n"
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "for word in st.split():\n",
+    "    if len(word) % 2 == 0:\n",
+    "        print(word)"
    ]
   },
   {
@@ -107,11 +141,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1\n2\nFizz\n4\nBuzz\nFizz\n7\n8\nFizz\nBuzz\n11\nFizz\n13\n14\nFizzBuzz\n16\n17\nFizz\n19\nBuzz\nFizz\n22\n23\nFizz\nBuzz\n26\nFizz\n28\n29\nFizzBuzz\n31\n32\nFizz\n34\nBuzz\nFizz\n37\n38\nFizz\nBuzz\n41\nFizz\n43\n44\nFizzBuzz\n46\n47\nFizz\n49\nBuzz\nFizz\n52\n53\nFizz\nBuzz\n56\nFizz\n58\n59\nFizzBuzz\n61\n62\nFizz\n64\nBuzz\nFizz\n67\n68\nFizz\nBuzz\n71\nFizz\n73\n74\nFizzBuzz\n76\n77\nFizz\n79\nBuzz\nFizz\n82\n83\nFizz\nBuzz\n86\nFizz\n88\n89\nFizzBuzz\n91\n92\nFizz\n94\nBuzz\nFizz\n97\n98\nFizz\nBuzz\n"
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "for num in range(1,101):\n",
+    "    if num % 3 == 0 and num % 5 == 0:\n",
+    "        print('FizzBuzz')\n",
+    "    elif num % 3 == 0:\n",
+    "        print('Fizz')\n",
+    "    elif num % 5 == 0:\n",
+    "        print('Buzz')\n",
+    "    else:\n",
+    "        print(num)"
    ]
   },
   {
@@ -124,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "[x[0] for x in st.split()]"
    ]
   },
   {
@@ -164,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
