updates for 2020 phase 2

--- a/08-Milestone Project - 2/00-Milestone-2-Warmup-Project.ipynb
+++ b/08-Milestone Project - 2/00-Milestone-2-Warmup-Project.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -24,7 +26,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
