--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Test your knowledge. \n",
     "\n",
@@ -20,9 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Write a brief description of all the following Object Types and Data Structures we've learned about: "
    ]
@@ -31,15 +27,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numbers:\n",
+    "Numbers: Integers, can be positive or negative, don't use quotes\n",
     "\n",
-    "Strings:\n",
+    "Strings: Ordered groups of characters, used with quotes\n",
     "\n",
-    "Lists:\n",
+    "Lists: Similar to JS arrays - ordered list of elements, can be strings, numbers, bool, other lists, and dictionaries\n",
     "\n",
-    "Tuples:\n",
+    "Tuples: Immutable lists, similar structure\n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries: Similar to JS objects - unordered key:value pairs\n"
    ]
   },
   {
@@ -55,10 +51,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = (((1 + 5) ** 2 + 10) - 6 / 2) + + 57.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.25"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,16 +93,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44 29 34\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 4 * (6 + 5)\n",
+    "y = 4 * 6 + 5 \n",
+    "z = 4 + 6 * 5 \n",
+    "\n",
+    "print(x, y, z)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br>"
+    "What is the *type* of the result of the expression 3 + 1.5 + 4?<br>float<br>"
    ]
   },
   {
@@ -100,7 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Square root:\n"
+    "# Square root:\n",
+    "10 ** 0.5"
    ]
   },
   {
@@ -109,7 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Square:\n"
+    "# Square:\n",
+    "10 ** 2"
    ]
   },
   {
@@ -128,13 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'hello'\n",
     "# Print out 'e' using indexing\n",
-    "\n"
+    "\n",
+    "print(s[1])"
    ]
   },
   {
@@ -146,13 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olleh\n"
+     ]
+    }
+   ],
    "source": [
     "s ='hello'\n",
     "# Reverse the string using slicing\n",
-    "\n"
+    "\n",
+    "print(s[::-1])"
    ]
   },
   {
@@ -164,25 +216,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "s ='hello'\n",
     "# Print out the 'o'\n",
     "\n",
     "# Method 1:\n",
-    "\n"
+    "print(s[-1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# Method 2:\n",
-    "\n"
+    "print(s[4])\n"
    ]
   },
   {
@@ -201,11 +269,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 1:\n"
+    "# Method 1:\n",
+    "s = []\n",
+    "s.append(0)\n",
+    "s.append(0)\n",
+    "s.append(0)\n",
+    "print(s)"
    ]
   },
   {
@@ -520,9 +601,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
