finished first test

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -291,11 +291,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 2:\n"
+    "# Method 2:\n",
+    "s = [0,0,0]\n",
+    "print(s)"
    ]
   },
   {
@@ -307,12 +317,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, [3, 4, 'goodbye']]\n"
+     ]
+    }
+   ],
    "source": [
     "list3 = [1,2,[3,4,'hello']]\n",
-    "\n"
+    "\n",
+    "list3[2][2] = 'goodbye'\n",
+    "print(list3)"
    ]
   },
   {
@@ -324,12 +344,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "list4 = [5,3,4,6,1]\n",
-    "\n"
+    "\n",
+    "list4.sort()\n",
+    "print(list4)"
    ]
   },
   {
@@ -348,51 +378,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "d = {'simple_key':'hello'}\n",
-    "# Grab 'hello'\n"
+    "# Grab 'hello'\n",
+    "s = d['simple_key']\n",
+    "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "d = {'k1':{'k2':'hello'}}\n",
-    "# Grab 'hello'\n"
+    "# Grab 'hello'\n",
+    "s = d['k1']['k2']\n",
+    "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting a little tricker\n",
     "d = {'k1':[{'nest_key':['this is deep',['hello']]}]}\n",
     "\n",
-    "#Grab hello\n"
+    "#Grab hello\n",
+    "s = d['k1'][0]['nest_key'][1][0]\n",
+    "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "# This will be hard and annoying!\n",
-    "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}"
+    "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}\n",
+    "\n",
+    "s = d['k1'][2]['k2'][1]['tough'][2][0]\n",
+    "print(s)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you sort a dictionary? Why or why not?<br><br>"
+    "Can you sort a dictionary? Why or why not?<br>No, it's unordered<br>"
    ]
   },
   {
@@ -406,14 +477,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the major difference between tuples and lists?<br><br>"
+    "What is the major difference between tuples and lists?<br>tuples are immutable<br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How do you create a tuple?<br><br>"
+    "How do you create a tuple?<br>my_tuple = (1,2,3)<br>"
    ]
   },
   {
@@ -427,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is unique about a set?<br><br>"
+    "What is unique about a set?<br>all the values are unique<br>"
    ]
   },
   {
@@ -439,12 +510,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-28-b3bcce96a98a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mlist5\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m33\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m22\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mlist5\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'set'"
+     ]
+    }
+   ],
    "source": [
     "list5 = [1,2,2,33,4,4,11,22,3,3,2]\n",
     "\n",
+    "list5.set()\n",
     "\n"
    ]
   },
