--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -45,36 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def lesser_of_two_evens(a,b):\n",
-    "    if a % 2 == 0 and b % 2 == 0:\n",
-    "        return(min(a,b))\n",
-    "    else:\n",
-    "        return(max(a,b))\n",
-    "    pass"
+    "    pass\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "2"
-     },
-     "metadata": {},
-     "execution_count": 11
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,4)"
@@ -82,20 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "5"
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,5)"
@@ -112,34 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
-    "    letter = text.split()\n",
-    "    return(letter[0][0] == letter[1][0])\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "True"
-     },
-     "metadata": {},
-     "execution_count": 24
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "animal_crackers('Levelheaded Llama')"
@@ -147,20 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "False"
-     },
-     "metadata": {},
-     "execution_count": 21
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "animal_crackers('Crazy Kangaroo')"
@@ -179,33 +138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def makes_twenty(n1,n2):\n",
-    "    return(n1 == 20 or n2 == 20 or n1+n2 == 20)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "True"
-     },
-     "metadata": {},
-     "execution_count": 33
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "makes_twenty(20,10)"
@@ -213,20 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "False"
-     },
-     "metadata": {},
-     "execution_count": 34
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "makes_twenty(2,3)"
@@ -252,46 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-37-8faab4edae59>, line 3)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-37-8faab4edae59>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    pass\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def old_macdonald(name):\n",
-    "    return(name.capitalize([0][3])\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-38-d7a2a6489a15>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Check\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mold_macdonald\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'macdonald'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-35-c021d1f50bc7>\u001b[0m in \u001b[0;36mold_macdonald\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mold_macdonald\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mname\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcapitalize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "old_macdonald('macdonald')"
@@ -319,35 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def master_yoda(text):\n",
-    "    yoda_speak = \" \".join(text.split()[::-1])\n",
-    "    return(yoda_speak)\n",
-    "    \n",
+    "    pass\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'home am I'"
-     },
-     "metadata": {},
-     "execution_count": 63
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "master_yoda('I am home')"
@@ -355,20 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'ready are We'"
-     },
-     "metadata": {},
-     "execution_count": 64
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "master_yoda('We are ready')"
@@ -390,33 +287,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def almost_there(n):\n",
-    "    return abs(100-n) <=10 or abs(200-n) <= 10\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "True"
-     },
-     "metadata": {},
-     "execution_count": 67
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "almost_there(104)"
@@ -424,20 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "False"
-     },
-     "metadata": {},
-     "execution_count": 68
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "almost_there(150)"
@@ -445,20 +323,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "True"
-     },
-     "metadata": {},
-     "execution_count": 69
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "almost_there(209)"
