--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -45,24 +45,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def lesser_of_two_evens(a,b):\n",
-    "    pass\n",
+    "\n",
+    "    if a % 2 == 0  and b % 2 == 0:\n",
+    "        return min(a,b)\n",
+    "    else:\n",
+    "        return max(a,b)\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,4)"
@@ -70,11 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "5"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,5)"
@@ -91,23 +114,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
-    "    pass"
+    "    \n",
+    "    word_list = text.split(' ')\n",
+    "    return word_list [0][0] == word_list[1][0]\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
    "source": [
     "# Check\n",
     "animal_crackers('Levelheaded Llama')"
@@ -115,11 +151,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
    "source": [
     "# Check\n",
     "animal_crackers('Crazy Kangaroo')"
@@ -138,35 +183,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def makes_twenty(n1,n2):\n",
-    "    pass"
+    "    return n1+n2 == 20\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
    "source": [
     "# Check\n",
-    "makes_twenty(20,10)"
+    "makes_twenty(10,10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
    "source": [
     "# Check\n",
     "makes_twenty(2,3)"
@@ -192,23 +256,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def old_macdonald(name):\n",
-    "    pass"
+    "    return name[0].capitalize() + name[1:3] + name[3].capitalize() + name[4:]\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'MacDonald'"
+     },
+     "metadata": {},
+     "execution_count": 54
+    }
+   ],
    "source": [
     "# Check\n",
     "old_macdonald('macdonald')"
@@ -236,24 +310,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def master_yoda(text):\n",
-    "    pass\n",
-    "    "
+    "    yodaspeak= \" \".join(text.split()[::-1])\n",
+    "    return yodaspeak"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'home am I'"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('I am home')"
@@ -261,11 +345,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'ready are We'"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('We are ready')"
@@ -287,23 +380,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def almost_there(n):\n",
-    "    pass"
+    "    if abs(100-n) <= 10 or abs(200-n) <= 10:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(104)"
@@ -311,11 +417,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(150)"
@@ -323,11 +438,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(209)"
@@ -355,23 +479,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def has_33(nums):\n",
-    "    pass"
+    "    for n in range(0, len(nums)-1):\n",
+    "        if nums[n] == 3 and nums[n+1] == 3:\n",
+    "            return True\n",
+    "    \n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 69
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 3])"
@@ -379,11 +516,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 70
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 1, 3])"
@@ -391,11 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 71
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([3, 1, 3])"
@@ -412,23 +567,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def paper_doll(text):\n",
-    "    pass"
+    "    final_text = ''\n",
+    "    for char in text:\n",
+    "        final_text += char*3\n",
+    "\n",
+    "    return final_text\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'HHHeeellllllooo'"
+     },
+     "metadata": {},
+     "execution_count": 90
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Hello')"
@@ -436,11 +604,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'MMMiiissssssiiissssssiiippppppiii'"
+     },
+     "metadata": {},
+     "execution_count": 91
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Mississippi')"
@@ -458,23 +635,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def blackjack(a,b,c):\n",
-    "    pass"
+    "    if a + b + c <= 21:\n",
+    "        return a+b+c\n",
+    "    elif a == 11 or b == 11 or c == 11:\n",
+    "        return a+b+c-10\n",
+    "    else:\n",
+    "        return 'BUST'\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "18"
+     },
+     "metadata": {},
+     "execution_count": 121
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(5,6,7)"
@@ -482,11 +674,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'BUST'"
+     },
+     "metadata": {},
+     "execution_count": 122
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,9)"
@@ -494,11 +695,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "19"
+     },
+     "metadata": {},
+     "execution_count": 123
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,11)"
@@ -517,23 +727,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def summer_69(arr):\n",
-    "    pass"
+    "    total = 0\n",
+    "    add = True\n",
+    "    for num in arr:\n",
+    "        while add:\n",
+    "            if num != 6:\n",
+    "                total += num\n",
+    "                break\n",
+    "            else:\n",
+    "                add = False\n",
+    "        while not add:\n",
+    "            if num != 9:\n",
+    "                break\n",
+    "            else: \n",
+    "                add = True\n",
+    "                break\n",
+    "    return total    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "9"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([1, 3, 5])"
@@ -541,11 +775,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "9"
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([4, 5, 6, 7, 8, 9])"
@@ -553,11 +796,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "14"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([2, 1, 6, 9, 11])"
@@ -583,23 +835,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def spy_game(nums):\n",
+    "    for n in range(0, len(nums)-1):\n",
+    "        if nums[n] == 0 and nums[n+1] == 0 and nums[n+2] == 7:\n",
+    "            return True\n",
+    "    \n",
+    "    return False\n",
+    "\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,2,4,0,0,7,5])"
@@ -607,11 +874,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,0,2,4,0,5,7])"
@@ -619,11 +895,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,7,2,0,4,5,0])"
@@ -689,7 +974,7 @@
    "outputs": [],
    "source": [
     "def print_big(letter):\n",
-    "    pass"
+    "    patterns = {1: '  *  ', 2: ' * * ', 3: ''}"
    ]
   },
   {
