--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -14,28 +14,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "def vol(rad):\n",
-    "    pass"
+    "    return ((4/3)*3.14*(rad**3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "33.49333333333333"
-      ]
+      "text/plain": "33.49333333333333"
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
    "source": [
@@ -53,30 +53,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    if num in range(low,high+1):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 7\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 15
     }
    ],
    "source": [
     "# Check\n",
-    "ran_check(5,2,7)"
+    "ran_check(2,2,7)"
    ]
   },
   {
@@ -135,27 +139,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    dict = {'upper': 0, 'lower': 0}\n",
+    "    for letter in s:\n",
+    "        if letter.isupper():\n",
+    "            dict['upper'] += 1\n",
+    "        elif letter.islower():\n",
+    "            dict['lower'] += 0\n",
+    "        else:\n",
+    "            pass    \n",
+    "\n",
+    "    print ('Original String : ', s)\n",
+    "    print('No. of Upper case Characters : ', dict['upper'])\n",
+    "    return dict['upper']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
-     ]
+     "name": "stdout",
+     "text": "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\nNo. of Upper case Characters :  4\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "4"
+     },
+     "metadata": {},
+     "execution_count": 47
     }
    ],
    "source": [
@@ -176,28 +197,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    new_list = []\n",
+    "    for num in lst:\n",
+    "        if num not in new_list:\n",
+    "            new_list.append(num)\n",
+    "    return new_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5]"
-      ]
+      "text/plain": "[1, 2, 3, 4, 5]"
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 55
     }
    ],
    "source": [
@@ -217,28 +240,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "def multiply(numbers):  \n",
-    "    pass"
+    "    x = 1\n",
+    "    for num in numbers:\n",
+    "        x *= num\n",
+    "    return x\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "-24"
-      ]
+      "text/plain": "-24"
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 66
     }
    ],
    "source": [
@@ -257,28 +282,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    if (s == s[::-1]):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 62
     }
    ],
    "source": [
@@ -378,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
