--- a/08-Milestone Project - 2/00-Milestone-2-Warmup-Project.ipynb
+++ b/08-Milestone Project - 2/00-Milestone-2-Warmup-Project.ipynb
@@ -1380,7 +1380,7 @@
     "\n",
     "            elif len(player_two.all_cards) < 5:\n",
     "                print(\"Player Two unable to play war! Game Over at War\")\n",
-    "                print(\"Player One Wins! Player One Loses!\")\n",
+    "                print(\"Player One Wins! Player Two Loses!\")\n",
     "                game_on = False\n",
     "                break\n",
     "            # Otherwise, we're still at war, so we'll add the next cards\n",
