Remove duplicate section on Print Formatting

--- a/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
+++ b/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
@@ -685,7 +685,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That is the basics of string formatting!"
+    "That is the basics of string formatting! We will revisit this string formatting topic in later sections when we are building our projects!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next up: Lists!"
    ]
   }
  ],
